--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
-aiohttp==3.5.4
-async-timeout==3.0.1
-attrs==19.1.0
+certifi==2019.3.9
 chardet==3.0.4
 idna==2.8
-idna-ssl==1.1.0
-multidict==4.5.2
 pkg-resources==0.0.0
 python-dotenv==0.10.1
-spotify==0.3.0
+requests==2.21.0
+spotipy==2.4.4
 twitter==1.18.0
-typing-extensions==3.7.2
-yarl==1.3.0
+urllib3==1.24.2
