--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
+autopep8==1.4.4
+blessings==1.7
 certifi==2019.3.9
 chardet==3.0.4
 idna==2.8
+inquirer==2.5.1
 pkg-resources==0.0.0
+pycodestyle==2.5.0
 python-dotenv==0.10.1
+readchar==2.0.1
 requests==2.21.0
+six==1.12.0
 spotipy==2.4.4
 twitter==1.18.0
 urllib3==1.24.2
